# siza-gen

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  api-extractor-lite.json  api-extractor.json  catalog-info.yaml  commitlint.config.cjs  eslint.config.js  jest.config.ts  knip.json  package-lock.json  package.json  sonar-project.properties  tsconfig.json  tsup.config.ts
.claude/plans/: brand-ui-integration.md
.github/: dependabot.yml
.github/workflows/: ai-security-review.yml  ci.yml  codeql.yml  publish.yml  python-ci.yml  secret-scan.yml  security-scan.yml  sonarcloud.yml
docs/: roadmap.md
etc/: siza-gen-lite.api.md  siza-gen.api.md
python/: Dockerfile  pyproject.toml
python/siza_ml/: __init__.py  app.py  config.py  data_ingestion.py  embeddings.py  health.py  metrics.py  prompt_enhancer.py  quality_scorer.py  training.py  turbo_cache.py  vector_store.py
python/tests/: conftest.py  test_embeddings.py  test_ingestion.py  test_metrics.py  test_quality.py  test_training.py  test_vector_store.py
scripts/: start-sidecar.sh
src/: brand-identity-transform.ts  config.ts  design-context.ts  index.ts  lite.ts  logger.ts
src/__tests__/: artifact-store.unit.test.ts  backend-registry.unit.test.ts  benchmark-evaluator.unit.test.ts  benchmark-harness.unit.test.ts  brand-identity-transform.unit.test.ts  component-libraries.unit.test.ts  component-registry.unit.test.ts  context-assembler.unit.test.ts  database-store.unit.test.ts  design-context-store.unit.test.ts  design-references.unit.test.ts  lite-entry.unit.test.ts  (+21 more)
(+92 files in other folders)
