[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siza-ml"
version = "0.1.0"
description = "Python ML sidecar for siza-gen — embeddings, vector search, quality scoring, training"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psutil>=5.9.0",
    "faiss-cpu>=1.9.0",
    "httpx>=0.27.0",
    "peft>=0.13.0",
    "transformers>=4.45.0",
    "datasets>=4.8.4",
    "accelerate>=1.0.0",
    "turboquant @ git+https://github.com/TheTom/turboquant_plus.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
